syntax = "proto3";

option php_namespace = "GRPC\\Services\\Ticket";
option php_metadata_namespace = "GRPC\\Services\\Ticket\\Meta";

package microtix;

service Ticket {
    rpc getTicket(GetTicketRequest) returns (TicketData);
}

message GetTicketRequest {
    int32 customer_id = 1;
    int32 event_id = 2;
    string email = 3;
}

message TicketData {
    int32 id = 1;
    string code = 2;
}